started authentication implementation
